log

s치., 12 de mar. de 2022 23:16:29: 
 exercises.c | 34 ++++++++++++++++++++++++++--------
 1 file changed, 26 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaV2':
exercises.c:129:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
1677153
s치., 12 de mar. de 2022 23:16:54: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1f3efb5
s치., 12 de mar. de 2022 23:18:21: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ec245aa
s치., 12 de mar. de 2022 23:19:50: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
0fc20f5
